--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="style.css"/>
     <body>
         <header>
             <a href="#price">Price list</a> <a href="#reviews">Reviews</a> <a href="#photos">Photos</a>
